total transaction fee endpoint has been added
